Refactoring: add mapper and update tests